crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__pattern_as_spaces_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "when 0 is\n    0 # foobar\n        as # barfoo\n        n -> {}\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Num=>Int@1
            InlineKwIs=>KwIs@2
            (* Num=>Int@3 Ident=>LowerIdent@5 EndPatternAs)
            InlineWhenArrow=>OpArrow@6
            (BeginRecord EndRecord)
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(IntBase10("0"), [PatternAs(IntBase10("0"), "n"), Record([])])

[=== formatted below ===]

