crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__pos_inf_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "inf\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("inf")

[=== formatted below ===]

