crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__positive_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "42.9\n"
---
(BeginTopLevelDecls HintExpr Float=>Float@0 EndTopLevelDecls)

[=== canfmt below ===]
Float("42.9")

[=== formatted below ===]

