crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__positive_int_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "42\n"
---
(BeginTopLevelDecls HintExpr Num=>IntBase10@0 EndTopLevelDecls)

[=== canfmt below ===]
IntBase10("42")

[=== formatted below ===]

